src/CAPI/CAPI_PDElements.pas


    for elem in pList do
    begin
        // if (elem.Enabled or DSS_CAPI_ITERATE_DISABLED) then
        begin
            Result[k] := DSS_CopyStringAsPChar(elem.FullName);
            Inc(k);
        end;
    end;
    if (idx_before > 0) and (idx_before <= pList.Count) then
        pList.Get(idx_before);
end;

procedure PDElements_Get_AllNames_GR(); CDECL;
// Same as PDElements_Get_AllNames but uses global result (GR) pointers
begin
    PDElements_Get_AllNames(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0]);
end;

//------------------------------------------------------------------------------
procedure _PDElements_Get_x(DSS: TDSSContext; var ResultPtr: PDouble; ResultCount: PAPISize; const What: integer; const AllNodes: Boolean);
// Internal helper function to calculate for all PDElements
// MaxCurrent (0), CapacityNorm (1), CapacityEmerg (2), Power (3)
var
    pList: TDSSPointerList;
begin
    if (MissingSolution(DSS)) or (DSS.ActiveCircuit.PDElements.Count <= 0) then 
    begin
        DefaultResult(ResultPtr, ResultCount, -1.0);
        Exit;
    end;
    pList := DSS.ActiveCircuit.PDElements;
    _Alt_PDEBatch_Get_x(ResultPtr, ResultCount, TDSSCktElementPtr(pList.InternalPointer), pList.Count, What, AllNodes);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllMaxCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; const AllNodes: TAPIBoolean); CDECL;
begin
    _PDElements_Get_x(DSSPrime, ResultPtr, ResultCount, 0, AllNodes);
end;

procedure PDElements_Get_AllMaxCurrents_GR(const AllNodes: TAPIBoolean); CDECL;
// Same as PDElements_Get_AllMaxCurrents but uses global result (GR) pointers
begin
    PDElements_Get_AllMaxCurrents(DSSPrime.GR_DataPtr_PDouble, DSSPrime.GR_Counts_PDouble, AllNodes)
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllPctNorm(var ResultPtr: PDouble; ResultCount: PAPISize; const AllNodes: TAPIBoolean); CDECL;
begin
    _PDElements_Get_x(DSSPrime, ResultPtr, ResultCount, 1, AllNodes);
end;

procedure PDElements_Get_AllPctNorm_GR(const AllNodes: TAPIBoolean); CDECL;
// Same as PDElements_Get_AllPctNorm but uses global result (GR) pointers
begin
    PDElements_Get_AllPctNorm(DSSPrime.GR_DataPtr_PDouble, DSSPrime.GR_Counts_PDouble, AllNodes)
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllPctEmerg(var ResultPtr: PDouble; ResultCount: PAPISize; const AllNodes: TAPIBoolean); CDECL;
begin
    _PDElements_Get_x(DSSPrime, ResultPtr, ResultCount, 2, AllNodes);
end;

procedure PDElements_Get_AllPctEmerg_GR(const AllNodes: TAPIBoolean); CDECL;
// Same as PDElements_Get_AllPctEmerg but uses global result (GR) pointers
begin
    PDElements_Get_AllPctEmerg(DSSPrime.GR_DataPtr_PDouble, DSSPrime.GR_Counts_PDouble, AllNodes)
end;

//------------------------------------------------------------------------------
procedure _PDElements_Get_AllCurrents_x(DSS: TDSSContext; var ResultPtr: PDouble; ResultCount: PAPISize; const What: Integer);
// What=1 for polar form, otherwise rectangular
var
    pList: TDSSPointerList;
begin
    if (InvalidCircuit(DSS)) or (DSS.ActiveCircuit.PDElements.Count <= 0) then 
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    pList := DSS.ActiveCircuit.PDElements;
    _Alt_CEBatch_Get_AllCurrentsVoltages_x(ResultPtr, ResultCount, TDSSCktElementPtr(pList.InternalPointer), pList.Count, What);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllCurrents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllCurrents_x(DSSPrime, ResultPtr, ResultCount, 0);
end;

procedure PDElements_Get_AllCurrents_GR(); CDECL;
// Same as PDElements_Get_AllCurrentsMagAng but uses global result (GR) pointers
begin
    PDElements_Get_AllCurrents(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0]);
end;
//------------------------------------------------------------------------------
procedure PDElements_Get_AllCurrentsMagAng(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllCurrents_x(DSSPrime, ResultPtr, ResultCount, 1);
end;

procedure PDElements_Get_AllCurrentsMagAng_GR(); CDECL;
// Same as PDElements_Get_AllCurrentsMagAng but uses global result (GR) pointers
begin
    PDElements_Get_AllCurrentsMagAng(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0]);
end;

//------------------------------------------------------------------------------
procedure _PDElements_Get_AllxSeqCurrents(DSS: TDSSContext; var ResultPtr: PDouble; ResultCount: PAPISize; magnitude: boolean);
var
    pList: TDSSPointerList;
begin
    if (MissingSolution(DSS)) or (DSS.ActiveCircuit.PDElements.Count <= 0) then 
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    
    pList := DSS.ActiveCircuit.PDElements;
    _Alt_CEBatch_Get_AllxSeqCurrents(ResultPtr, ResultCount, TDSSCktElementPtr(pList.InternalPointer), pList.Count, magnitude);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllSeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllxSeqCurrents(DSSPrime, ResultPtr, ResultCount, True);
end;

procedure PDElements_Get_AllSeqCurrents_GR(); CDECL;
// Same as PDElements_Get_AllSeqCurrents but uses global result (GR) pointers
begin
    PDElements_Get_AllSeqCurrents(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0]);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllCplxSeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllxSeqCurrents(DSSPrime, ResultPtr, ResultCount, False);
end;

procedure PDElements_Get_AllCplxSeqCurrents_GR(); CDECL;
// Same as PDElements_Get_AllCplxSeqCurrents but uses global result (GR) pointers
begin
    PDElements_Get_AllCplxSeqCurrents(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0]);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllPowers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Return complex kW, kvar in each conductor for each terminal, for each PDElement
var
    pList: TDSSPointerList;
begin
    if (InvalidCircuit(DSSPrime)) or (DSSPrime.ActiveCircuit.PDElements.Count <= 0) then 
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    pList := DSSPrime.ActiveCircuit.PDElements;
    Alt_CEBatch_Get_Powers(ResultPtr, ResultCount, TDSSCktElementPtr(pList.InternalPointer), pList.Count);
end;

procedure PDElements_Get_AllPowers_GR(); CDECL;
// Same as PDElements_Get_AllPowers but uses global result (GR) pointers
begin
    PDElements_Get_AllPowers(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0]);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllSeqPowers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// All seq Powers of each PD element
// returns kW + j kvar
var
    Result: PDoubleArray0;
    NValuesTotal, MaxNValues, i, j, k, n, iCount: Integer;
    idx_before: Integer;
    pList: TDSSPointerList;
    pElem: TPDElement;
    CResultPtr: PComplex;
    cBuffer: pComplexArray;
    VPh, V012: Complex3;
    IPh, I012: Complex3;
    S: Complex;
    NodeV: pNodeVarray;
begin
    if (MissingSolution(DSSPrime)) or (DSSPrime.ActiveCircuit.PDElements.Count <= 0) then 
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    NodeV := DSSPrime.ActiveCircuit.Solution.NodeV;
    pList := DSSPrime.ActiveCircuit.PDElements;
    idx_before := pList.ActiveIndex;

    // Get the total number of (complex) elements
    NValuesTotal := 0;
    MaxNValues := 0;
    
    for pElem in pList do
    begin
        if pElem.Enabled then
        begin
            Inc(NValuesTotal, 3 * pElem.NTerms);
            MaxNValues := Max(MaxNValues, pElem.NConds * pElem.NTerms);
        end;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, NValuesTotal * 2);
    CResultPtr := PComplex(ResultPtr);
    cBuffer := Allocmem(sizeof(Complex) * MaxNValues);

    // Get the actual values
    iCount := 0;
    for pElem in pList do
    begin
//            if not pElem.Enabled then  
//            begin
//                continue;
//            end;
        if pElem.NPhases <> 3 then
        begin
            if (pElem.Nphases = 1) and DSSPrime.ActiveCircuit.PositiveSequence then
            begin
                if pElem.Enabled then  
                    pElem.GetCurrents(cBuffer)
                else
                    FillByte(cBuffer^, SizeOf(Complex) * MaxNValues, 0);

                Inc(iCount, 2);  // Start with kW1
                // Put only phase 1 quantities in Pos seq
                for j := 1 to pElem.NTerms do
                begin
                    k := (j - 1) * pElem.NConds;
                    if pElem.Enabled and (pElem.NodeRef <> NIL) then
                    begin
                        n := pElem.NodeRef[k + 1];
                        Vph[1] := NodeV[n];  // Get voltage at node
                        S := Vph[1] * cong(cBuffer[k + 1]);   // Compute power per phase
                        Result[icount] := S.re * 0.003; // 3-phase kW conversion
                        Result[icount + 1] := S.im * 0.003; // 3-phase kvar conversion
                    end;                    
                    Inc(icount, 6);
                end;
                Dec(iCount, 2);
            end
            else
            begin
                for i := 0 to 2 * 3 * pElem.NTerms - 1 do
                    Result[iCount + i] := -1.0;  // Signify n/A
                    
                Inc(iCount, 6 * pElem.NTerms);
            end;
        end
        else
        begin
            if pElem.Enabled then  
                pElem.GetCurrents(cBuffer)
            else
                FillByte(cBuffer^, SizeOf(Complex) * MaxNValues, 0);
        
            for j := 1 to pElem.NTerms do
            begin
                k := (j - 1) * pElem.NConds;
                if pElem.Enabled and (pElem.NodeRef <> NIL) then                
                begin
                    for i := 1 to 3 do
                        Vph[i] := NodeV[pElem.NodeRef[i + k]];
                    for i := 1 to 3 do
                        Iph[i] := cBuffer[k + i];

                    Phase2SymComp(@Iph, @I012);
                    Phase2SymComp(@Vph, @V012);

                    for i := 1 to 3 do
                    begin
                        S := V012[i] * cong(I012[i]);
                        Result[icount] := S.re * 0.003; // 3-phase kW conversion
                        Result[icount + 1] := S.im * 0.003; // 3-phase kW conversion
                        Inc(icount, 2);
                    end;
                end
                else
                    Inc(icount, 6);
            end;
        end;
        Inc(CResultPtr, 3 * pElem.NTerms);
        
    end;
    ReAllocMem(cBuffer, 0);

    if (idx_before > 0) and (idx_before <= pList.Count) then
        pList.Get(idx_before);
end;

procedure PDElements_Get_AllSeqPowers_GR(); CDECL;
// Same as PDElements_Get_AllPowers but uses global result (GR) pointers
begin
    PDElements_Get_AllSeqPowers(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0]);
end;
